syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "GroupCopyCmdProto";

package GroupCopyCmd;

enum GroupCopyReqType{
	GET_INFO = 1;
}

enum ResultCode{
	CODE_SUC = 1;//成功
	CODE_FAIL = 2;//失败
}


//副本地图章节状态  [枚举类型要从0开始，否则后端序列化给前端的时候会出错]
enum GroupCopyMapStatus{
	LOCKING = 0;
    NOTSTART = 1;
	ONGOING = 2;
	FINISH = 3;
}

message GroupCopyCmdReqMsg{
	required GroupCopyReqType reqType = 1;//请求的协议类型
	optional string version = 2; //版本号
	
	
}

message GroupCopyCmdRspMsg{
	required GroupCopyReqType reqType = 1; //请求的协议类型
	required ResultCode resCode = 2;//返回的结果代码
}


